--- a/bdm.css
+++ b/bdm.css
@@ -49,7 +49,7 @@ button:hover,#btnon {
 }
 @font-face {
     font-family:fzxs;
-    src:url("//bobby233.github.io/font/FZXIANGSU16.TTF");
+    src:url("https://bobby233.github.io/font/FZXIANGSU16.TTF");
 }
 #act {
     background-color: #2c2c2c;
