--- a/bdm.css
+++ b/bdm.css
@@ -50,6 +50,7 @@ button:hover,#btnon {
 @font-face {
     font-family:fzxs;
     src:url("https://bobby233.github.io/font/FZXIANGSU16.TTF");
+	font-display: swap;
 }
 #act {
     background-color: #2c2c2c;
